--- a/src/RvtTestRunner/UI/TestRunnerControl.xaml
+++ b/src/RvtTestRunner/UI/TestRunnerControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="RvtTestRunner.UI.TestRunnerControl"
+<UserControl x:Class="RvtTestRunner.UI.TestRunnerControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -11,13 +11,18 @@
         <Style TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
             <Setter Property="Width" Value="75" />
             <Setter Property="Height" Value="25" />
-            <Setter Property="Margin" Value="5"></Setter>
+            <Setter Property="Margin" Value="5" />
+        </Style>
+        <Style TargetType="CheckBox" BasedOn="{StaticResource {x:Type CheckBox}}">
+            <Setter Property="Margin" Value="5" />
         </Style>
     </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
@@ -28,11 +33,13 @@
         <Label Target="{Binding ElementName=SelectedAssemblies}" Content="Selected Assemblies" />
         <ListBox Name="SelectedAssemblies" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
                  ItemsSource="{Binding Path=SelectedAssemblies}" SelectedItem="{Binding Path=SelectedAssembly}" />
-        <Button Grid.Row="2" Grid.Column="0" Content="Add" Command="{Binding Path=BrowseCommand}" />
-        <Button Grid.Row="2" Grid.Column="1" Content="Remove" Command="{Binding Path=RemoveCommand}" />
-        <Button Grid.Row="3" Grid.Column="0" Content="Execute" Command="{Binding Path=ExecuteCommand}"
+        <CheckBox Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Content="Allow ExternalCommandData Access" IsChecked="{Binding Path=AllowCommandDataAccess}" />
+        <CheckBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Content="Copy DLLs to new folder" IsChecked="{Binding Path=CopyDllsToNewFolder}" IsEnabled="{Binding Path=IsCopyDllsToNewFolderEnabled}" />
+        <Button Grid.Row="4" Grid.Column="0" Content="Add" Command="{Binding Path=BrowseCommand}" />
+        <Button Grid.Row="4" Grid.Column="1" Content="Remove" Command="{Binding Path=RemoveCommand}" />
+        <Button Grid.Row="5" Grid.Column="0" Content="Execute" Command="{Binding Path=ExecuteCommand}"
                 CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" />
-        <Button Grid.Row="3" Grid.Column="1" Content="Cancel" Command="{Binding Path=CancelCommand}"
+        <Button Grid.Row="5" Grid.Column="1" Content="Cancel" Command="{Binding Path=CancelCommand}"
                 CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" />
     </Grid>
 </UserControl>
